--- a/Todolist/Todolist.html
+++ b/Todolist/Todolist.html
@@ -44,7 +44,8 @@
     <h3>Completed Tasks</h3>
     <ul id="completed-tasks"></ul>
   </div>
-  <script src="../login/index.js"></script>
+  
+  <script src="script.js"></script>
 </body>
 
 </html>
