Adds habit tr from branch seb+also added link

--- a/Registeringsida/login.html
+++ b/Registeringsida/login.html
@@ -17,6 +17,9 @@
             <a href="login.html">Home</a>
             <a href="../Weather App/index.html">Weather</a>
             <a href="../Timer App/index.html">Timer</a>
+
+             <!-- //Ta inte bort detta de är min TodoList !!!! -->
+            <a href="../Todolist/Todolist.html">Todo List</a>
             
         </nav>
         <img src="logo.png" alt="">
