adds some style

--- a/Todolist/Todolist.html
+++ b/Todolist/Todolist.html
@@ -23,10 +23,10 @@
     
 </header>
 
-<div class="container">
+<div>
   <div class="card">
-    <h2>profile page</h2>
     <button onclick="logOut()" class="btn btn-primary" id="out">Logout</button>
+    <h2>profile page</h2>
       
       <hr>
       <h3>Welcome
@@ -40,7 +40,7 @@
 </div>
 
   <div class="container">
-    <div id="todoApp">
+    <div class="todo" id="todoApp">
         <h2>Todo List</h2>
         <form id="todo-form">
             <input type="text" id="task-title" placeholder="Task Title" required>
@@ -61,7 +61,7 @@
         <ul id="completed-tasks"></ul>
     </div>
 
-    <div id="habitsTracker">
+    <div class="habits" id="habitsTracker">
         <h2>Habit Tracker</h2>
         <form id="habit-form">
             <input type="text" id="habits-title" placeholder="Habit Title" required>
