Uppdatering Registering sida

--- a/Registeringsida/index.html
+++ b/Registeringsida/index.html
@@ -14,7 +14,7 @@
     
     <div class="container">
         <div class="card">
-            <h2>Resisteringsform</h2>
+            <h2>Registeringsform</h2>
 
             <form action="#">
                 <div class="form-group">
